# Swastik

./: .gitignore  .pre-commit-config.yaml  delete_files_and_dirs.py
data/: jonesfactors.csv  (+3 more)
nutrion/: LICENSE  Makefile  README.md  pyproject.toml
nutrion/src/diabetes/: app.py  cli.py
nutrion/tests/diabetes/: test_sample.py
swastik_web/: populate_first_app.py  pyproject.toml
swastik_web/Learning&Experiments/: loss_func.ipynb  weight_initialization.ipynb
swastik_web/Learning&Experiments/Papers/: letnet5.ipynb
swastik_web/Learning&Experiments/PytorchTutorials/: Untitled.ipynb  annn.ipynb  cnn.ipynb  generate_name.ipynb  rnn-lstm-Copy1.ipynb  vae.ipynb
swastik_web/Learning&Experiments/PytorchTutorials/encoder-decoder/: ae.ipynb
swastik_web/Learning&Experiments/PytorchTutorials/model_checkpoints/: cnn-checkoint.pth.tar  cnn-checkpoint.pth.tar
swastik_web/Learning&Experiments/PytorchTutorials/pytorch docs/: intro.ipynb
swastik_web/Learning&Experiments/PytorchTutorials/pytorch lightning/: .scale_batch_size_aa93f24f-e2ce-4cd9-b81c-25225b347394.ckpt  00.ipynb  Untitled1.ipynb  config.py  train.py
swastik_web/Learning&Experiments/PytorchTutorials/pytorch_doc/: introduction2pytorch.ipynb  model.pth
swastik_web/apps/algo_apps/andraj-karpathy/: intro to language model.ipynb
swastik_web/apps/algo_apps/load_pandas_df/: food_composition_table.py  load.ipynb
swastik_web/apps/algo_apps/nutrition/: cgm.ipynb  nutritional_value_table.ipynb  ultrahuman_cgm_readings.xlsx
swastik_web/apps/authentication/: urls.py  views.py
swastik_web/apps/chatbot/: admin.py  gpt_models.py  models.py  urls.py  views.py
swastik_web/apps/chatbot/migrations/: 0001_initial.py
swastik_web/apps/home/: apps.py  models.py  urls.py  views.py
swastik_web/apps/home/migrations/: 0001_initial.py  0002_remove_autoloaddata_ajgs_remove_autoloaddata_ajgs_e_and_more.py
swastik_web/apps/home/templatetags/: custom_filters.py  tagger.py
swastik_web/apps/loaddata/: admin.py  apps.py  models.py  views.py
swastik_web/apps/loaddata/migrations/: 0001_initial.py  0002_foodcompostiontablecolmap_indianfooddatabase_and_more.py  0003_foodcompostiontable_ajgs_max_and_more.py
swastik_web/apps/quiz/: admin.py  forms.py  models.py  urls.py  views.py
swastik_web/apps/quiz/migrations/: 0001_initial.py  0002_alter_quiz_time.py
swastik_web/apps/utils/: resize_image.py
swastik_web/core/: settings.py  urls.py
swastik_web/data/nutrition/: columns_mapping.csv  indian_food.xlsx
(+161 files in other folders)
