[tool.poetry]
name = "nutrion"
version = "0.0.1"
description = "A simple application"
authors = ["Pranav Jha <pranavjha1993@gmail.com>"]
# Use identifier from https://spdx.org/licenses/
license = "Proprietary"
readme = "README.md"
homepage = "https://github.com/Jha_Pranav/nutrion"
repository = "https://github.com/Jha_Pranav/nutrion"
documentation = "https://github.com/Jha_Pranav/nutrion/blob/master/README.md"
classifiers = [
    # https://pypi.org/classifiers/
    "Environment :: Console",
    "Development Status :: 1 - Planning",
]
packages = [
    { include = "diabetes", from = "src" }
]

[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/Jha_Pranav/nutrion/issues"

[tool.poetry.scripts]
nutrion = "diabetes.cli:cli"

[tool.poetry.dependencies]
python = "^3.8.0"
click = "^8.0.1"
jupyterlab = "^3.0.0"
pandas = "^1.2.0"
jupyterlab_git = "^0.23.3"
jupyterlab_widgets = "^1.0.0"
jupyter-dash = "^0.4.2"
openpyxl = "^3.1.2"
black = "22.12.0"
autopep8 = "2.0.0"
dash-bootstrap-components = "^1.4.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.6.2"
black = "^22.0"
bump2version = "^1.0.1"
isort= "^5.0.8"
flake8 = "^5.0.4"
jedi-language-server = "^0.22.0"
pylint = "^2.6.0"
pytest = "^7.0.1"
pytest-cov = "^3.0"
pytest-xdist = "^2.5.0"
vulture = "^2.3"
mypy = "^0.982"
pyinstaller = "^4.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py38']

[tool.pytest.ini_options]
# Example
filterwarnings = [
    "ignore::DeprecationWarning:moto.*:",
    "ignore::DeprecationWarning:boto.*:",
]
